# xbatis2sql

./: .gitignore  Cargo.toml  ChangeLog.md  README.cn.md  README.md  build.zsh  test.zsh
.github/workflows/: cargo_publish.yml
src/: main.rs
src/args/: args_parser.rs  mod.rs  parse_args.rs
src/logger/: log_init.rs  mod.rs
src/logit/: log_initializer.rs  mod.rs
src/parser/: abt_parser.rs  def.rs  ibatis_parser.rs  mod.rs  mybatis_parser.rs  parse_helper.rs
src/save/: mod.rs  sql_saver.rs
src/saver/: mod.rs  save.rs
src/scan/: mod.rs  xml_scanner.rs
src/scanner/: mod.rs  xml_scanner.rs
src/xbatis/: def.rs  ibatis_parser.rs  mod.rs  mybatis_parser.rs  parse_helper.rs  xbatis_parser.rs  xml_parser.rs
test_data/: mapper-demo-2.xml  mapper-demo.xml  sqlmap-demo-2.xml  sqlmap-demo.xml
