[package]
name = "xbatis2sql"
version = "0.2.0-dev"
edition = "2021"
authors = ["Helly Guo <hellyguo@foxmail.com>"]
exclude = ["tests", "test_data", "examples", ".vscode"]
homepage = "https://github.com/hellyguo/xbatis2sql"
repository = "https://github.com/hellyguo/xbatis2sql"
license = "Apache-2.0"
readme = "README.md"
description = "collect sql statements from iBATIS sqlmap files/MyBatis mapper files"
categories = ["command-line-interface", "command-line-utilities"]
documentation = "https://docs.rs/crate/xbatis2sql/latest"
keywords = ["iBATIS", "MyBatis", "SQL", "Parser", "XML"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
simplelog = "0.12.0"
walkdir = "2.3.2"
regex = "1.5.4"
lazy_static = "1.4.0"
xml-rs = "0.8.4"
getopts = "0.2.21"
