[package]
name = "xbatis2sql"
version = "0.2.6-dev"
edition = "2021"
authors = ["Helly Guo <hellyguo@foxmail.com>"]
exclude = ["tests", "test_data", "examples", ".vscode", "*.zsh"]
homepage = "https://github.com/itcraft-cn/xbatis2sql"
repository = "https://github.com/itcraft-cn/xbatis2sql"
license = "Apache-2.0"
readme = "README.md"
description = "collect sql statements from iBATIS sqlmap files/MyBatis mapper files"
categories = ["command-line-utilities"]
documentation = "https://docs.rs/crate/xbatis2sql/latest"
keywords = ["iBATIS", "MyBatis", "SQL", "Parser", "XML"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
log4rs = {version="1.2.0",features = []}
walkdir = "2.3.2"
regex = "1.7.1"
lazy_static = "1.4.0"
xml-rs = "0.8.16"
getopts = "0.2.21"
